[package]
name = "rust-text-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-width = "0.1.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2.121"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", default-features = false, features = ["wincon"] }
winapi-util = "0.1.4"

[dev-dependencies]
tempfile = "3.3.0"
serial_test = "0.6.0"
